--- a/test/Voorbeelden/Unit_tests/pom.xml
+++ b/test/Voorbeelden/Unit_tests/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>SRP1</artifactId>
+    <artifactId>Unit_tests</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>22</maven.compiler.source>
-        <maven.compiler.target>22</maven.compiler.target>
+        <maven.compiler.source>20</maven.compiler.source>
+        <maven.compiler.target>20</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
@@ -20,4 +20,5 @@
             <version>5.9.2</version>
         </dependency>
     </dependencies>
+
 </project>
